--- a/template.html
+++ b/template.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="ja">
+<html lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>ページのタイトル</title>
+  <title>Template</title>
   <style>
 html {
   height: 100%;
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 96%;
   font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   font-size: 16pt;
 }
@@ -19,6 +19,7 @@ body {
   padding: 0 4%;
   border: solid 2px #000;
   border-radius: 6px;
+  scale: 0.5;
 }
   </style>
   <body>
